src/objects/ActivityDescriptionMapping__mdt.object
<CustomObject>
    <description>Contains the mapping of the activity description of all provider hold activities</description>
    <fields>
        <fullName>ActivityDescription__c</fullName>
        <description>Contains activity description of activity tracking record</description>
        <label>Activity Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Contains the reason description of the activity tracking object</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>contains the status of the provider hold activity, whether it is accepted or rejected</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                    <default>true</default>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <description>contains the transaction type of the activity</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                    <default>true</default>
                    <label>Hold</label>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Activity Description Mapping</label>
    <pluralLabel>Activity Description Mappings</pluralLabel>
</CustomObject>